--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>form</title>
 </head>
   <body>
-   <h1>Registration Form check again</h1>
+   <h1>Registration Form correction</h1>
     
 	<form>
 	<div>
